<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.jenkins-ci.plugins</groupId>
		<artifactId>plugin</artifactId>
		<version>3.26</version>
		<relativePath />
	</parent>
	<groupId>io.jenkins.plugins</groupId>
	<artifactId>meterian-plugin</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>hpi</packaging>

	<properties>
		<jenkins.version>2.138.2</jenkins.version>
		<java.version>1.8</java.version>
		<java.level>8</java.level>
		<useBeta>true</useBeta>
	</properties>

	<name>Meterian Plugin</name>
	<description>A plugin to use Meterian seamlessly with Jenkins</description>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<!-- Assuming you want to host on @jenkinsci: <url>https://wiki.jenkins.io/display/JENKINS/TODO+Plugin</url>
		<scm> <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
		<developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
		<url>https://github.com/jenkinsci/${project.artifactId}-plugin</url> </scm> -->
	<dependencies>

		<dependency>
			<groupId>org.jenkinsci.plugins</groupId>
			<artifactId>pipeline-model-definition</artifactId>
			<version>1.3.2</version>
		</dependency>

		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>ssh-credentials</artifactId>
			<version>1.13</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.7</version>
		</dependency>

		<dependency>
			<groupId>com.urswolfer.gerrit.client.rest</groupId>
			<artifactId>gerrit-rest-java-client</artifactId>
			<version>0.8.13</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>19.0</version>
		</dependency>

		<!--  gerrit review plugin & dependencies -->
		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>gerrit-code-review</artifactId>
			<version>0.3.2</version>
		</dependency>

		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>structs</artifactId>
			<version>1.17</version>
		</dependency>

		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>cloudbees-folder</artifactId>
			<version>6.6</version>
		</dependency>

		<dependency>
			<groupId>org.jenkins-ci.plugins</groupId>
			<artifactId>junit</artifactId>
			<version>1.26.1</version>
		</dependency>

		<dependency>
		    <groupId>org.jenkins-ci.plugins</groupId>
		    <artifactId>script-security</artifactId>
		    <version>1.42</version>
		</dependency>

		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.5.6</version>
		</dependency>

		<dependency>
		    <groupId>org.jenkins-ci</groupId>
		    <artifactId>annotation-indexer</artifactId>
		    <version>1.12</version>
		</dependency>

		<!-- https://git-scm.com/book/uz/v2/Appendix-B%3A-Embedding-Git-in-your-Applications-JGit -->
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>4.5.4.201711221230-r</version>
		</dependency>

		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.54</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.mylyn.github/org.eclipse.egit.github.core -->
		<dependency>
			<groupId>org.eclipse.mylyn.github</groupId>
			<artifactId>org.eclipse.egit.github.core</artifactId>
			<version>2.1.5</version>
		</dependency>
	</dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
            <!--
            <plugin>
                <groupId>org.jenkins-ci.tools</groupId>
                <artifactId>maven-hpi-plugin</artifactId>
                <configuration>
                    <pluginFirstClassLoader>true</pluginFirstClassLoader>
                </configuration>
            </plugin>
            -->
        </plugins>
    </build>

	<repositories>
		<repository>
			<id>repo.jenkins-ci.org</id>
			<url>https://repo.jenkins-ci.org/public/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>repo.jenkins-ci.org</id>
			<url>https://repo.jenkins-ci.org/public/</url>
		</pluginRepository>
	</pluginRepositories>
</project>
